--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame: ^1.1.1
   rive: ^0.8.4
   flame_rive: ^1.2.0
+  firebase_core: ^1.17.0
 
 dev_dependencies:
   flutter_test:
