--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^9.0.14
   uuid: ^3.0.6
   rxdart: ^0.27.3
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
