--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Flutter",
+            "name": "app",
             "type": "dart",
             "request": "launch",
             "program": "lib/main.dart",
             "cwd": "${workspaceFolder}/app"
         },
-
+        {
+            "name": "server",
+            "type": "dart",
+            "request": "launch",
+            "program": "bin/server.dart",
+            "cwd": "${workspaceFolder}/server"
+        },
+        
     ]
 }
