--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,12 +37,12 @@ dependencies:
   flame: ^1.1.1
   rive: ^0.8.4
   flame_rive: ^1.2.0
-  firebase_core: ^1.17.0
-  firebase_database: ^9.0.14
   uuid: ^3.0.6
   rxdart: ^0.27.3
   get_it: ^7.2.0
   vector_math: ^2.1.2
+  web_socket_channel: ^2.2.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
