--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  core:
+    path: ../core
   flame: ^1.1.1
   rive: ^0.8.4
   flame_rive: ^1.2.0
