--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   core:
     path: ../core
   shelf: ^1.1.0
+  shelf_cors_headers: ^0.1.4
   shelf_router: ^1.0.0
   shelf_web_socket: ^1.0.2
   uuid: ^3.0.6
