--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   vector_math: ^2.1.2
   web_socket_channel: ^2.2.0
   http: ^0.13.4
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
