--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -5,7 +5,7 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.17.5 <3.0.0'
+  sdk: '>=2.19.0 <4.0.0'
 
 dependencies:
   args: ^2.0.0
@@ -20,6 +20,7 @@ dependencies:
   web_socket_channel: ^2.2.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   http: ^0.13.0
   lints: ^2.0.0
   test: ^1.15.0
