--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   web_socket_channel: ^2.2.0
   http: ^0.13.4
   flutter_svg: ^1.1.6
+  flutter_shake_animated: ^0.0.5
 
 dev_dependencies:
   flutter_test:
