--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -5,7 +5,7 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=3.1.0-83.0.dev <=4.0.0'
+  sdk: '>=3.1.0-163.0.dev <4.0.0'
 
 dependencies:
   args: ^2.0.0
