--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -1,13 +1,9 @@
 name: core
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# homepage: https://www.example.com
 
 environment:
-  sdk: '>=3.2.0-42.0.dev <4.0.0'
-
-# dependencies:
-#   path: ^1.8.0
+  sdk: '>=3.1.0 <4.0.0'
 
 dev_dependencies:
   build_runner: ^2.3.3
