--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -3,7 +3,8 @@ description: A starting point for Dart libraries or applications.
 version: 1.0.0
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.1.5 <4.0.0'
+  flutter: '3.13.9'
 
 dev_dependencies:
   build_runner: ^2.3.3
