--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: none
 version: 1.0.0
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.1.5 <4.0.0'
+  flutter: '3.13.9'
 
 dependencies:
   args: ^2.0.0
