--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -23,12 +23,18 @@ jobs:
       # https://github.com/dart-lang/setup-dart/blob/main/README.md
       # - uses: dart-lang/setup-dart@v1
       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
 
       - name: Install core dependencies
         run: dart pub get -C core
         
       - name: Install server dependencies
         run: dart pub get -C server
+        
+      - name: Install app dependencies
+        run: flutter pub get -C app
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       - name: Verify formatting
