--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,16 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
-      # Note: This workflow uses the latest stable version of the Dart SDK.
-      # You can specify other versions if desired, see documentation here:
-      # https://github.com/dart-lang/setup-dart/blob/main/README.md
-      # - uses: dart-lang/setup-dart@v1
-      - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
+      - uses: actions/checkout@v4
+      - uses: dart-lang/setup-dart@v1
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+
+      - name: Print dart version
+        run: dart --version
+        
+      - name: Print flutter version
+        run: flutter --version
 
       - name: Install core dependencies
         run: dart pub get -C core
