--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -28,14 +28,32 @@ jobs:
       - name: Print flutter version
         run: flutter --version
 
+      # Core
+      - name: Go to core
+        run: cd core
       - name: Install core dependencies
-        run: dart pub get -C core
+        run: dart pub get
+      - name: Run build runner
+        run: dart run build_runner build --delete-conflicting-outputs
         
+      # Server
+      - name: Go to server
+        run: cd ../server
       - name: Install server dependencies
-        run: dart pub get -C server
-        
+        run: dart pub get
+      - name: Run build runner
+        run: dart run build_runner build --delete-conflicting-outputs
+
+      # App
+      - name: Go to app
+        run: cd ../app
       - name: Install app dependencies
-        run: flutter pub get -C app
+        run: flutter pub get
+      - name: Run build runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+
+      - name: Back to root directory
+        run: cd ..
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       - name: Verify formatting
