--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: subosito/flutter-action@v2
       - name: build web
         working-directory: ./app
-        run:
+        run: |
           flutter pub get
           flutter build web --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
