--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,6 +14,7 @@ jobs:
         working-directory: ./app
         run: |
           flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
           flutter build web --release
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
