--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,4 +67,18 @@ jobs:
           if-no-files-found: error
           retention-days: 1
           compression-level: 0
+
+      - name: build release web
+        working-directory: ./app
+        run: |
+          flutter pub get
+          flutter pub run build_runner build --delete-conflicting-outputs
+          flutter build web --release
+          
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MOBILE_FIGHTERS }}'
+          channelId: live
+          projectId: mobile-fighters
           
