--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,42 +16,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-api-image:
-    runs-on: ubuntu-latest
-    
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag mobilefighters:$(date +%s)
-
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-    
-  build-and-push-to-firebase:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -94,24 +59,69 @@ jobs:
       # want to change this to 'flutter test'.
       # - name: Run tests
       #   run: dart test
-      
-      # want to change this to 'flutter test'.
-      # - name: Compile server
-      #   run: dart compile aot-snapshot server/bin/main.dart --output mobile_fighters_api.aot
+  
+  push-api-image-to-github-docker-registry:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    permissions:
+      contents: read
+      packages: write
 
-      # - name: Upload a Build Artifact
-      #   uses: actions/upload-artifact@v4.1.0
-      #   with:
-      #     name: mobile_fighters_api.aot
-      #     path: mobile_fighters_api.aot
-      #     if-no-files-found: error
-      #     retention-days: 1
-      #     compression-level: 0
-          
+    steps:
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag mobilefighters:$(date +%s)
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+    
+  build-and-push-to-firebase:
+    runs-on: ubuntu-latest
+    needs: build
+    if: false
+
+    steps:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MOBILE_FIGHTERS }}'
           channelId: live
           projectId: mobile-fighters
+
+  compile-and-upload-api-artifact:
+    runs-on: ubuntu-latest
+    needs: build
+    if: false
+
+    steps:
+      - name: Compile server
+        run: dart compile aot-snapshot server/bin/main.dart --output mobile_fighters_api.aot
+  
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.1.0
+        with:
+          name: mobile_fighters_api.aot
+          path: mobile_fighters_api.aot
+          if-no-files-found: error
+          retention-days: 1
+          compression-level: 0
+    
           
