--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: false
 
     steps:
       - uses: actions/checkout@v4
@@ -62,7 +63,7 @@ jobs:
   
   push-api-image-to-github-docker-registry:
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
     
     permissions:
       contents: read
@@ -74,7 +75,7 @@ jobs:
         run: docker build . --file Dockerfile --tag mobilefighters:$(date +%s)
 
       - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        uses: docker/login-action@latest
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -82,12 +83,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
