--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,43 +26,49 @@ jobs:
         with:
           channel: 'stable'
 
-      # Core
-      - name: Build core
-        working-directory: ./core
-        run: |
-          dart pub get
-          dart run build_runner build --delete-conflicting-outputs
+      # # Core
+      # - name: Build core
+      #   working-directory: ./core
+      #   run: |
+      #     dart pub get
+      #     dart run build_runner build --delete-conflicting-outputs
           
-      # Server
-      - name: Build server
-        working-directory: ./server
-        run: |
-          dart pub get
-          dart run build_runner build --delete-conflicting-outputs
+      # # Server
+      # - name: Build server
+      #   working-directory: ./server
+      #   run: |
+      #     dart pub get
+      #     dart run build_runner build --delete-conflicting-outputs
           
-      # App
-      - name: Build web
-        working-directory: ./app
-        run: |
-          flutter pub get
-          flutter pub run build_runner build --delete-conflicting-outputs
-          flutter build web --release
+      # # App
+      # - name: Build web
+      #   working-directory: ./app
+      #   run: |
+      #     flutter pub get
+      #     flutter pub run build_runner build --delete-conflicting-outputs
+      #     flutter build web --release
 
-      # Analyze with dart
-      - name: Verify formatting
-        run: dart format --output=none --set-exit-if-changed .
-      - name: Analyze project source
-        run: dart analyze
+      # # Analyze with dart
+      # - name: Verify formatting
+      #   run: dart format --output=none --set-exit-if-changed .
+      # - name: Analyze project source
+      #   run: dart analyze
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
       # want to change this to 'flutter test'.
       # - name: Run tests
       #   run: dart test
+
+      - name: Share context to the next jobs
+        uses: actions/upload-artifact@v4
+        with:
+          name: context
+          path: .
   
   push-api-image-to-github-docker-registry:
     runs-on: ubuntu-latest
-    # needs: build
+    if: false
     
     permissions:
       contents: read
@@ -97,6 +103,7 @@ jobs:
   build-and-push-to-firebase:
     runs-on: ubuntu-latest
     needs: build
+    if: false
 
     steps:
       - uses: FirebaseExtended/action-hosting-deploy@v0
@@ -111,6 +118,10 @@ jobs:
     needs: build
 
     steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: context
+          
       - name: Compile server
         run: dart compile aot-snapshot server/bin/main.dart --output mobile_fighters_api.aot
   
@@ -120,7 +131,8 @@ jobs:
           name: mobile_fighters_api.aot
           path: mobile_fighters_api.aot
           if-no-files-found: error
-          retention-days: 1
           compression-level: 0
+
+      
     
           
