--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: 3.9.2
+  flutter: 3.35.5
 
 dependencies:
   flutter:
@@ -13,10 +14,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   core:
     path: ../core
-  uuid: ^4.4.0
+  uuid: ^4.5.1
   rxdart: ^0.27.3
   get_it: ^7.2.0
-  vector_math: ^2.1.2
+  vector_math: ^2.2.0
   web_socket_channel: ^2.2.0
   http: ^1.1.0
   flutter_svg: ^2.0.2
@@ -24,6 +25,7 @@ dependencies:
   value_stream_builder: ^1.0.0
   shared_preferences: ^2.2.2
   freezed_annotation: ^2.4.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
