--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -3,16 +3,20 @@ description: A starting point for Dart libraries or applications.
 version: 1.0.0
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: 3.9.2
+  flutter: 3.35.5
 
+dependencies:
+  freezed_annotation: ^2.1.0
+  http: ^1.1.0
+  json_annotation: ^4.6.0
+  vector_math: ^2.2.0
+  path_provider: ^2.1.5
+  
 dev_dependencies:
   build_runner: ^2.3.3
   freezed: ^2.1.0+1
   json_serializable: ^6.3.1
   lints: ^3.0.0
   test: ^1.16.0
-dependencies:
-  freezed_annotation: ^2.1.0
-  http: ^1.1.0
-  json_annotation: ^4.6.0
-  vector_math: ^2.1.4
+  
